--- a/papers.html
+++ b/papers.html
@@ -21,7 +21,7 @@
 		( <a href="https://arxiv.org/pdf/2211.12787.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Xiang Gao, Yannic Noller, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">arxiv Report 2211.12787, Nov 2022.
-		<font color="#FF0000"><b>New Survey on Program Repair</b></font></p> 
+		<i>New Survey on Program Repair</i></p> 
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE23]</b></p>
