--- a/papers.html
+++ b/papers.html
@@ -14,6 +14,14 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Automated Program Repair workshop, ICSE 2023.
 		<font color="#FF0000"><b>Announcement of a new intitative</b></font></p> 
 	 
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>HIPPODROME: Data Race Repair using Static Analysis Summaries 
+		( <a href="https://arxiv.org/pdf/2108.02490.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Andreea Costea, Abhishek Tiwari, Sigmund Chianasta, Kishore R, Abhik Roychoudhury, Ilya Sergey</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software 
+	Engineering and Methodology (TOSEM), 32(2), March 2023.</p>
+	 
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
@@ -100,14 +108,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM International Symposium on Software Testing and Analysis (ISSTA) 2022.</p>
 	 
 	 
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>HIPPODROME: Data Race Repair using Static Analysis Summaries 
-		( <a href="https://arxiv.org/pdf/2108.02490.pdf">PDF</a> )</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Andreea Costea, Abhishek Tiwari, Sigmund Chianasta, Kishore R, Abhik Roychoudhury, Ilya Sergey</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software 
-	Engineering and Methodology (TOSEM), To appear (2022).</p>
-	 
+
 	 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM]</b></p>
