--- a/papers.html
+++ b/papers.html
@@ -14,6 +14,15 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Automated Program Repair workshop, ICSE 2023.
 		<font color="#FF0000"><b>Announcement of a new intitative</b></font></p> 
 	 
+	  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ISSTA23]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Concept-based Automated Grading of CS-1 Programming Assignments
+		( <a href="./pdf/ISSTA23.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Shin Hwei Tan, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM International Symposium on Software Testing and Analysis (ISSTA) 2023. </p> 
+	 
+	 
+	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>HIPPODROME: Data Race Repair using Static Analysis Summaries 
@@ -22,14 +31,6 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software 
 	Engineering and Methodology (TOSEM), 32(2), March 2023.</p>
 	 
-	 
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Program Repair
-		( <a href="https://arxiv.org/pdf/2211.12787.pdf">PDF</a> )</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Xiang Gao, Yannic Noller, Abhik Roychoudhury</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">arxiv Report 2211.12787, Nov 2022.
-		<i>New Survey on Program Repair</i></p> 
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE23]</b></p>
