--- a/papers.html
+++ b/papers.html
@@ -26,7 +26,7 @@
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>HIPPODROME: Data Race Repair using Static Analysis Summaries 
-		( <a href="https://arxiv.org/pdf/2108.02490.pdf">PDF</a> )</b></p>
+		( <a href="./pdf/TOSEM23.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Andreea Costea, Abhishek Tiwari, Sigmund Chianasta, Kishore R, Abhik Roychoudhury, Ilya Sergey</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software 
 	Engineering and Methodology (TOSEM), 32(2), March 2023.</p>
