--- a/students.htm
+++ b/students.htm
@@ -124,30 +124,28 @@ student), <i>Concurrent system Fuzzing</i> (tentative topic).</font></p>
 	Advised</b></font>
 	
 	  <br>
-	  <b><font face="Arial" size="2">Christopher Goh Zhen Fung</font></b>
+	  <b><font face="Arial" size="2">Christopher Goh Zhen Fung</font></b> (2023)
 	<br>
-	  <b><font face="Arial" size="2">Eris Jacey Masagaca</font></b>
+	  <b><font face="Arial" size="2">Eris Jacey Masagaca</font></b> (2023)
 	<br>
-	  <b><font face="Arial" size="2">Ethan Noah Rozario</font></b>
+	  <b><font face="Arial" size="2">Ethan Noah Rozario </font></b> (2023)
 	<br>
 	  
-	 <p><a href="Zhenxin.jfif">
-<img border="2" src="Zhenxin.fif"></a><p>
-<font face="Arial" size="2"><b>Zhenxin Huang</b>, Design of Intelligent Tutoring 
-Systems for Programming Education.</font><p>
+	 <b>Zhenxin Huang</b>, (2023) Design of Intelligent Tutoring 
+Systems for Programming Education.
 	  
-	<p><a href="jon.jpg">
-<img border="2" src="jon_small.jpg" xthumbnail-orig-image="jon.jpg"></a><p>
-<font face="Arial" size="2"><b>Jon Chua</b>, Design of Intelligent Tutoring 
-Systems for Programming Education.</font><p>
-<a href="Guo%20AI.jpg">
-<img border="2" src="Guo%20AI_small.jpg" xthumbnail-orig-image="Guo AI.jpg"></a><p>
-<font face="Arial" size="2"><b>Guo Ai</b>, Design of Intelligent Tutoring 
-Systems for Programming Education (feedback to students)</font><p>
-<a href="kishore6.PNG">
-<img border="2" src="kishore6_small.PNG" xthumbnail-orig-image="kishore6.PNG"></a><p>
-<b><font face="Arial" size="2">Kishore R</font></b><font face="Arial" size="2">, Design of Intelligent Tutoring 
-Systems for Programming Education (support for multiple target languages).</font><p>
+	<br>
+<font face="Arial" size="2"><b>Jon Chua</b>, (2022) Design of Intelligent Tutoring 
+Systems for Programming Education.</font>
+	  
+	  <br>
+<font face="Arial" size="2"><b>Guo Ai</b>, (2022) Design of Intelligent Tutoring 
+Systems for Programming Education (feedback to students)</font>
+
+<br>	
+<b><font face="Arial" size="2">Kishore R</font></b> (2022), Design of Intelligent Tutoring 
+Systems for Programming Education.
+	  
 &nbsp;<hr>
 
   <p><b><font face="Arial" size="5" color="#800080">PhD Alumni</font></b><p>
