--- a/students.htm
+++ b/students.htm
@@ -124,19 +124,19 @@ student), <i>Concurrent system Fuzzing</i> (tentative topic).</font></p>
 	Advised</b></font>
 	
 	  <br>
-	  <b><font face="Arial" size="2">Christopher Goh Zhen Fung</font></b> (2023)
+	  <br>
+	  <b><font face="Arial" size="2">Christopher Goh Zhen Fung</font></b> (2023) Fixing of compilation errors in Intelligent Tutoring
 	<br>
-	  <b><font face="Arial" size="2">Eris Jacey Masagaca</font></b> (2023)
+	  <b><font face="Arial" size="2">Eris Jacey Masagaca</font></b> (2023) Intelligent feedback generation for Intelligent Tutoring.
 	<br>
-	  <b><font face="Arial" size="2">Ethan Noah Rozario </font></b> (2023)
+	  <b><font face="Arial" size="2">Ethan Noah Rozario </font></b> (2023) Feedback presentation in Intelligent Tutoring.
 	<br>
 	  
-	 <b>Zhenxin Huang</b>, (2023) Design of Intelligent Tutoring 
-Systems for Programming Education.
+	 <b>Zhenxin Huang</b>, (2023) Automated Grading support in Intelligent Tutoring.
 	  
 	<br>
 <font face="Arial" size="2"><b>Jon Chua</b>, (2022) Design of Intelligent Tutoring 
-Systems for Programming Education.</font>
+Systems for Programming Education (feedback computation).</font>
 	  
 	  <br>
 <font face="Arial" size="2"><b>Guo Ai</b>, (2022) Design of Intelligent Tutoring 
@@ -144,7 +144,7 @@ Systems for Programming Education (feedback to students)</font>
 
 <br>	
 <b><font face="Arial" size="2">Kishore R</font></b> (2022), Design of Intelligent Tutoring 
-Systems for Programming Education.
+Systems for Programming Education (supporting multiple  programming languages).
 	  
 &nbsp;<hr>
 
