--- a/students.htm
+++ b/students.htm
@@ -173,7 +173,7 @@ Award 2018, <i>Best PhD thesis 2018</i></b>, University College London (UCL) as
 <img border="2" src="thuan_small.jpg" xthumbnail-orig-image="thuan.jpg"></a></p>
 <p><font face="Arial" size="2"><b><a href="https://thuanpv.github.io">Van Thuan 
 Pham</a></b>, <i><a href="Students/Thuan.pdf">Enhancing directed search in black-box, grey-box and white-box fuzz 
-		testing</a>, </i>Graduated 2018, moved as Lecturer (Asst Prof) at University of Melbourne from 2020.</font></p>
+		testing</a>, </i>Graduated 2018, Lecturer (Asst Prof) at University of Melbourne from 2020.</font></p>
 <p><a href="abhijeet.jpg">
 <img border="2" src="abhijeet_small.jpg" xthumbnail-orig-image="abhijeet.jpg"></a></p>
 <p><font face="Arial" size="2"><b>Abhijeet Banerjee</b>, <i>
@@ -188,8 +188,8 @@ Pham</a></b>, <i><a href="Students/Thuan.pdf">Enhancing directed search in black
 <span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson">
 <span class="scopediv ofUserUser ofUser" id="ofUserUser"><b>
 <a href="https://mboehme.github.io"><font color="#800080">Marcel Böhme</font></a></b>,&nbsp; 
-				<i><a href="Students/Marcel.pdf"><font color="#800080">Automated regression testing and verification of complex code changes</font></a>,</i> 
-Graduated 2014 -&gt; Senior Lecturer, Monash -&gt; Faculty Member, Max-Planck 
+				<i><a href="Students/Marcel.pdf"><font color="#800080">Automated regression testing and verification of complex code changes</font></a>,
+	</i>  Graduated 2014 -&gt; Faculty Member, Max-Planck 
 Institute for Security and Privacy.</span></span></span></span></span></span></font></p>
 <p><a href="sudipta.jpg">
 <img border="2" src="sudipta_small.jpg" xthumbnail-orig-image="sudipta.jpg"></a></p>
