--- a/papers.html
+++ b/papers.html
@@ -6,8 +6,15 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
 	<font face="Arial" size="4" color="#800000">2023</font></i></b></p>
 	 
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Distributed System Fuzzing
+		( <a href="https://arxiv.org/pdf/2305.02601.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, George Pirlea, Abhik Roychoudhury, Ilya Sergey</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">arxiv, Posted 2023. </p> 
+	 
 	  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[APR23]</b></p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[APR23]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Program Repair Competition
 		( <a href="./pdf/APR23.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ridwan Shariffdeen, Martin Mirchev, Abhik Roychoudhury</p>
