--- a/index.html
+++ b/index.html
@@ -220,7 +220,13 @@
 </p>      	 	
 <br>
 <ul> 
-<li><p><font face="Arial">
+<li>
+	
+	<p align="center"> 	 		 	
+		<img border="0" src="abhik-pictures/ICSE2023.jpg" width="400" height="300"></p>
+	
+	
+	<p><font face="Arial">
 	Most Influential Paper Award talk at International Conference on Software Engineering (ICSE) 2023 for ICSE 2013 paper.</p>
 
 	<iframe src="https://www.slideshare.net/slideshow/embed_code/key/uCHG4cb9oMpPmm?hostedIn=slideshare&page=upload" 
