--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<br>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<i> abhik at comp.nus.edu.sg</i> (Preferred)</span><br> 
-		<span style="font-weight: 400"><i>dcsar at nus.edu.sg, abhik at u.nus.edu</i>
+		<span style="font-weight: 400"><i>dcsar at nus.edu.sg, abhik.roychoudhury@gmail.com</i>
 			<br><br><u>Admin contact</u>:
 			<br> Neo Chee Yong
 			<br><i>neocy at nus.edu.sg</i>	
