--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
 	<ul>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
+		Fuzz Testing, National Research Foundation (NRF) Cybersecurity R&D,  
+		2023-27.</p>
+		<li>
+		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
 		<a href="https://nus-apr.github.io">Automated Program Repair</a>, Ministry of Education (MoE) Tier3 program, 
 		2022-27.</p>
 		<li>
