--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a></font></H3>
 		<br><font face="Arial" size="2">
 		<a href="https://nus-apr.github.io/">APR</a><br>
+		<a href="https://nus-tss.github.io/fuzzing/">Fuzzing</a><br>	
 		<a href ="https://descartes.cnrsatcreate.cnrs.fr/">Descartes</a><br>
-		<a href="https://www.comp.nus.edu.sg/~nsoe-tss">NSoE-TSS</a><br>
 		<a href="https://nus-plse.github.io">PLSE@NUS</a><br>
-		<a href ="https://abhikrc.com/students.htm">Secure-SW group</a></font>
+		<a href ="https://nus-tss.github.io">TSS group@NUS</a></font>
 		<br>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<i> abhik at comp.nus.edu.sg</i> (Preferred)</span><br> 
