--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 	<ul>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
-		Fuzz Testing, National Research Foundation (NRF) Cybersecurity R&D,  
+		<a href = "https://nus-tss.github.io/fuzzing/">Fuzz Testing</a>, National Research Foundation (NRF) Cybersecurity R&D,  
 		2023-27.</p>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
@@ -139,22 +139,22 @@
 		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
 		<a href="https://descartes.cnrsatcreate.cnrs.fr/">Descartes: Intelligent Modeling for Decision Making in Critical Urban 
 		Systems</a>, 2021-26.</p>
-		<li>
-		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
-		<font face="Arial" color="#800080">
-		<a href="https://www.comp.nus.edu.sg/~nsoe-tss">National Satellite of 
-		Excellence in Trustworthy Software Systems</a>, </font>2019-23.</p></font>
+	
 	</ul>
 
   	 	
 
 
 	<ul>
+<li>
+		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
+		<font face="Arial" color="#800080">
+		<a href="https://www.comp.nus.edu.sg/~nsoe-tss">National Satellite of 
+		Excellence in Trustworthy Software Systems</a>, </font>2019-23.</p></font>
 
+	
 
-	 	
-
-	<font face="Arial">      	 	 	 	
+	 	 	 	 	
 
 	 	
 
