--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 	<p align="center">&nbsp;</p>
 	<hr>    			  			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	 	
 	<b><font face="Arial" size="4"><a href="AbhikCVshort.pdf">[CV]</a>
-	<a href="teaching.html">[TEACHING]</a>&nbsp;<a href="https://nus-tss.github.io/">[TEAM]</a> <a href="research.html"> 	[RESEARCH]</a>&nbsp;<a href="papers.html">[PUBLICATIONS]</a>
+	<a href="teaching.html">[TEACHING]</a>&nbsp;<a href="https://nus-tss.github.io/">[RESEARCH GROUP]</a> 
+		<a href="papers.html">[PUBLICATIONS]</a>
 	<a href="tools.html">[TOOLS]</a>&nbsp; <a href="service.html">[SERVICE]</a>&nbsp;	 	 	   
 	<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
 	[Google Scholar]</a>&nbsp;&amp; <a href="select-pubs.html">[Selected Papers]</a></font></b>
@@ -110,12 +111,7 @@
 
 <ul>
 <li><font face="Arial">
-	<a href="projects/Repair/index.html">Program Repair</a>&nbsp;
-	<b> <a href="https://nus-apr.github.io">RECENT</a></b>
-	</font></li>
-	<br>
-	<li><font face="Arial">
-	<a href="projects/Fuzz">Fuzzing and Symbolic Execution</a></font></li>
+	<a href ="https://nus-tss.github.io">Trustworthy and Secure Software (TSS)@NUS</a> Group webpage </font>
 	</ul>
 	 	
 
@@ -159,11 +155,11 @@
 	 	
 
 		<li>
-		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
+		<p style="margin-top: 0; margin-bottom: 0" align="left"> <font face="Arial">	
 		<a href="https://fuzzinfer.github.io">FuzzInfer: Fuzzing Protocol Implementations</a>, with DSO, 2019-21.</p></font>
-		<font face="Arial">
+		</font>
 		</li>
-		</font><font face="Arial" color="#800080">
+		<font face="Arial" color="#800080">
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial"><a href="http://www.comp.nus.edu.sg/~tsunami/">Trustworthy systems from un-trusted component amalgamations</a>, 
