--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<b><font face="Arial" size="4" color="#800080">Newsflash!</font></b></p>
 	<ul>
+		li>
+		<p style="margin-top: 0; margin-bottom: 0" align="left">
+		<font face="Arial">
+		National Research Foundation Cybersecurity R&D program's project <a href = "https://nus-tss.github.io/fuzzing/">
+			Fuzz testing (2023-27) </a> launched!	
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
