--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<b><font face="Arial" size="4" color="#800080">Newsflash!</font></b></p>
 	<ul>
-		li>
+		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
-		National Research Foundation Cybersecurity R&D program's project <a href = "https://nus-tss.github.io/fuzzing/">
-			Fuzz testing (2023-27) </a> launched!	
+		4 year research program on <a href = "https://nus-tss.github.io/fuzzing/">
+			Fuzz testing (2023-27) </a> launched under National Research Foundation National Cybersecurity R&D.
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
