--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
-		4 year research program on <a href = "https://nus-tss.github.io/fuzzing/">
-			Fuzz testing (2023-27) </a> launched under National Research Foundation National Cybersecurity R&D.
+		Research program on <a href = "https://nus-tss.github.io/fuzzing/">
+	        Fuzz testing (2023-27) </a> launched under National Research Foundation Cybersecurity Research. </p>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
