--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
 		Research program on <a href = "https://nus-tss.github.io/fuzzing/">
-	        Fuzz testing (2023-27) </a> launched under National Research Foundation Cybersecurity Research. </p>
+	        Fuzz testing </a> (2023-27) launched under National Research Foundation Cybersecurity Research. </p>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
