--- a/students.htm
+++ b/students.htm
@@ -13,7 +13,7 @@
 	
 
 
-<h2><font color="#800080" face="Arial" size="6">Secure Software Research Group at NUS</font></h2>
+<h2><font color="#800080" face="Arial" size="6">Trustworthy & Secure Software Research Group at NUS</font></h2>
 <h2><font face="Arial" size="4"> &nbsp;</font>
 	
 	<font face="Arial" color="#800080" size="5"><b>Research Pages </b></font>
