--- a/teaching.html
+++ b/teaching.html
@@ -10,11 +10,11 @@
 
 			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	
 		<b><font size="4" face="Arial"><a href="index.html">[MAIN PAGE]</a>&nbsp;&nbsp;
-		<a href="students.htm">[STUDENTS]</a> <a href="research.html">
+		<a href="https://nus-tss.github.io/team/">[STUDENTS]</a> <a href="research.html">
 		[RESEARCH]</a>&nbsp;<a href="tools.html">[TOOLS]</a>&nbsp; <a href="service.html">[SERVICE]</a>&nbsp;&nbsp;
 		</font></b><p style="margin-top: 0; margin-bottom: 0">  	 	&nbsp;<hr>    			
 
-		<p><font face="Arial" size="2" color="#800080"><b> <a href="students.htm"><font color="#800080">Graduate Students 
+		<p><font face="Arial" size="2" color="#800080"><b> <a href="https://nus-tss.github.io/team/"><font color="#800080">Graduate Students 
 	and Post-docs</font></a></b></font></p>
 	<hr>
 		<p><b><font face="Arial" size="2" color="#800080">Courses Taught</font></b><font face="Arial" size="2" color="#800080"><b>&nbsp;at 
