--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
 		<H3><font size="2" face="Arial">Professor<br>               <a href="http://www.comp.nus.edu.sg/"><font color="#800080">School  		of Computing</font></a><br>            National University of Singapore</font></H3> 		<H3><font size="2" face="Arial">abhik at comp dot nus dot edu dot sg</font></H3> 		<p>&nbsp;</p>         </blockquote>       </DIV></TD>     <TD width="349">       &nbsp;</TD>   </TR></TBODY></TABLE>    <p style="margin-top: 0; margin-bottom: 0">&nbsp;<font size="2" face="Arial"><hr>    			
 
 			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	
-	<b><font size="4" face="Arial"><a href="index.html">[MAIN PAGE]</a>&nbsp;
+	<font size="4" face="Arial"><a href="index.html">[MAIN PAGE]</a>&nbsp;
 	<hr>    			
 
 	<p style="margin-top: 0; margin-bottom: 0" align="left"><b> 
@@ -14,7 +14,8 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 	<b> 
 	<i>Steering Committee Member</i></b></p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;International 
+	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;International 
 	Conference on Software Engineering (ICSE), from 2021.&nbsp; </p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; International Symposium on Software Testing and Analysis (ISSTA), 2016-23.</p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -39,7 +40,8 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
 		<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 			IEEE Transactions on Dependable and Secure Computing (TDSC), 2019-23.</i></p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ACM Transactions on Software Engineering and Methodology (TOSEM), currently 
+	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
+		<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ACM Transactions on Software Engineering and Methodology (TOSEM), currently 
 	serving, EiC for <b>
 	<a href="https://dl.acm.org/journal/tosem/continuous-special-sections-on-security-and-SE">Continuous Special Section on Security and SE.</a></b></i></p> 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i>IEEE Transactions on Software Engineering (TSE), 
 	2014-18.</p> 	
