--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
 		<H3><font size="2" face="Arial">Professor<br>               <a href="http://www.comp.nus.edu.sg/"><font color="#800080">School  		of Computing</font></a><br>            National University of Singapore</font></H3> 		<H3><font size="2" face="Arial">abhik at comp dot nus dot edu dot sg</font></H3> 		<p>&nbsp;</p>         </blockquote>       </DIV></TD>     <TD width="349">       &nbsp;</TD>   </TR></TBODY></TABLE>    <p style="margin-top: 0; margin-bottom: 0">&nbsp;<font size="2" face="Arial"><hr>    			
 
 			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	
-	<font size="4" face="Arial"><a href="index.html">[MAIN PAGE]</a>&nbsp;
+	<b><font size="4" face="Arial"><a href="index.html">[MAIN PAGE]</a></font></b>&nbsp;
 	<hr>    			
 
 	<p style="margin-top: 0; margin-bottom: 0" align="left"><b> 
