--- a/news-old.htm
+++ b/news-old.htm
@@ -20,6 +20,9 @@
 		
 		
 		<ul>
+			<li><i>[July23]</i>
+			Research program on <a href="https://nus-tss.github.io/fuzzing>" Fuzz Testing </a> (2023-27) launched under NRF National 
+			Cybersecurity R&D program</li>
 			<li> <i>[Jan23]&nbsp; </i>
 			We are honored to receive <a href="http://www.icse-conferences.org/mostinfluential.html"> ICSE Most Influential Paper Award </a>
 			for ICSE13 paper "SemFix: Program Repair via Semantic Analysis". 
