--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
 		<a href="https://nus-apr.github.io"><b>Automated Program Repair</b></a> (2022-27). 
-		<a href = "https://nus-apr.github.io/launch-event/">Grant launch</a> just happened</p>
+		<a href = "https://nus-apr.github.io/launch-event/">Grant launch</a> occured in Nov 22.</p>
 		
 			
 	<br><li> Honored to receive <a href=" https://tc.computer.org/tcse/awards/">IEEE TCSE New Directions Award 2022
