--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<img border="0" src="abhikpicture-cropped.jpg" width="296" height="231"></font></TD>      		 	
 	<TD width="340" bordercolor="#000000" bordercolorlight="#000000" bordercolordark="#000000">       <DIV align=left>         <blockquote>            			
 		<H3><font face="Arial"><br>
-		<a href="https://www.comp.nus.edu.sg/cs/bio/abhik">Abhik Roychoudhury</a></font><font size="5" face="Arial">       </font> 			</H3> 			  	<H3>
+		Abhik Roychoudhury</font><font size="5" face="Arial">       </font> 			</H3> 			  	<H3>
 		<font face="Arial" size="2">Provost's Chair Professor <br> 
 			<a href="https://www.comp.nus.edu.sg/cs/">Department of Computer Science</a><br> 
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a></font></H3>
