--- a/service.html
+++ b/service.html
@@ -15,8 +15,11 @@
 	<b> 
 	<i>Steering Committee Member</i></b></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Member of SE3 committee co-ordinating
+		the three Software Engineering conferences (ICSE/ESEC-FSE/ASE), 2022 - 27. </p>		
+	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;International 
-	Conference on Software Engineering (ICSE), from 2021.&nbsp; </p>
+	Conference on Software Engineering (ICSE), 2021 - 27.&nbsp; </p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; International Symposium on Software Testing and Analysis (ISSTA), 2016-23.</p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<span style="color: rgb(0, 0, 0); font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none">
