--- a/service.html
+++ b/service.html
@@ -63,49 +63,8 @@
 	<a href="http://fse22.gatech.edu">SIGSOFT FSE 2014</a> <i>Doctoral Symposium Co-chair</i>.</p> 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="http://www.iiitb.ac.in/ictac/index.html">ICTAC 12</a>  	<i>Program Chair</i>.</p> 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="http://www.rtss.org/">RTSS12</a>&nbsp; 	<i>Chair</i>, <i>Design and Verification Track</i>.</p> 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Co-organizer of 	<a href="https://researcher.ibm.com/researcher/view_project.php?id=2581"> 	<font color="#800080">Workshop on Future of Debugging</font></a><font color="#800080">, 	</font>Feb 2012.</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;</p> 			 <p style="margin-top: 0; margin-bottom: 0" align="left"> <font face="Arial" size="4" color="#800080"><b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></font><b><i>Program Committee Memberships 
-	(Recent):</i></b></p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><a href="https://conf.researchr.org/committee/icse-2021/icse-2021-papers-program-committee">ICSE 2021</a>, ESEC-FSE 2021, ISSTA 2021, ASE 2021.</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><a href="https://conf.researchr.org/committee/icse-2020/icse-2020-technical-papers-program-board">ICSE 
-	2020</a>, ICST 2020, 
-	<a href="https://2020.esec-fse.org/committee/fse-2020-papers-program-committee">ESEC-FSE 2020</a>, MSR 2020, ASE 2020, 
-	EMSOFT 2020.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>&nbsp;&nbsp;&nbsp;&nbsp;
-	</i></p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;</i></p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><a href="http://esec-fse19.ut.ee/">ESEC-FSE 2019</a>, 
-	<a href="https://conf.researchr.org/home/icse-2019">ICSE 2019</a>, <a href="http://www.ase2018.com/">ASE2018</a>,
-	<a href="http://mobilesoftconf.org/2018/">MobileSoft2018</a>.</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><a href="http://ase2017.org/">ASE 2017</a><i>,
-	</i><a href="http://icse2017.gatech.edu">ICSE 2017</a>, <a href="http://esec-fse17.uni-paderborn.de/">ESEC-FSE 2017</a>,
-	<a href="http://aster.or.jp/conference/icst2017/">ICST 2017</a>,
-	<a href="http://itrust.sutd.edu.sg/hase2017/">HASE 2017</a>.</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><a href="issta2015.cs.uoregon.edu">ISSTA 2015</a>,&nbsp; EMSOFT 2015,&nbsp;
-	<a href="http://icst2015.ist.tu-graz.ac.at/">ICST 2015</a>, 
-	<a  href="http://rv2015.conf.tuwien.ac.at/">RV 2015,</a>
-	<a href="http://2016.icse.cs.txstate.edu">ICSE 2016</a>, 
-	<a href="http://issta2016.cispa.saarland/">ISSTA 2016.</a></p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i>FM 2014,&nbsp; ICSE 2014 (NIER), ISEC 2014, ICST 2014, DATE 2014, RTAS  	2014, LCTES 2014, RTSS 2014.</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><a href="http://isoft.acm.org/isec2013">ISEC 13</a>,  	
-	<a href="http://www.icst.lu/">ICST 13</a>,  	
-	<a href="http://issta2013.inf.usi.ch/">ISSTA 13</a>,  	
-	<a href="http://issta2013.inf.usi.ch/doctoralsymposium">ISSTA 13 Doctoral Symposium</a>, 	
-	<a href="http://www.etaps.org/2013/fase13">FASE 13</a>,  	
-	<a href="http://ase2013.org/">ASE 13</a>, 	
-	<a href="http://ictac2013.ecnu.edu.cn/">ICTAC 13</a>, 	
-	<a href="http://www.uet.vnu.edu.vn/atva2013">ATVA 13</a>,  	
-	<a href="2013.ieee-rtss.org">RTSS 2013</a>.</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="http://www.sigsoft.org/fse20">SIGSOFT FSE12</a>, 	
-	<a href="http://lctes12.cs.purdue.edu/">LCTES12</a>, DATE12, ATVA12.</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
-	<p style="margin-top: 0; margin-bottom: 0" align="left"><i> &nbsp;&nbsp;</i></p><hr>    			
+	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;</p> 			
+	   <hr>    			
 
 	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p> 	    			
 
@@ -191,6 +150,54 @@
 	COST Action</font></a>&nbsp; on 	<a href="http://www.cost.eu/domains_actions/ict/Actions/IC1202"> 	<font color="#800080">
 	Timing Analysis on Code Level (TACLe)</font></a>&nbsp; [2012-15].</p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p> 	
+
+
+<p style="margin-top: 0; margin-bottom: 0" align="left"> <font face="Arial" size="4" color="#800080"><b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></font>
+		   <b><i>Program Committee Memberships 
+	(Not maintained any more):</i></b></p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><a href="https://conf.researchr.org/committee/icse-2021/icse-2021-papers-program-committee">ICSE 2021</a>, ESEC-FSE 2021, ISSTA 2021, ASE 2021.</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><a href="https://conf.researchr.org/committee/icse-2020/icse-2020-technical-papers-program-board">ICSE 
+	2020</a>, ICST 2020, 
+	<a href="https://2020.esec-fse.org/committee/fse-2020-papers-program-committee">ESEC-FSE 2020</a>, MSR 2020, ASE 2020, 
+	EMSOFT 2020.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>&nbsp;&nbsp;&nbsp;&nbsp;
+	</i></p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;</i></p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><a href="http://esec-fse19.ut.ee/">ESEC-FSE 2019</a>, 
+	<a href="https://conf.researchr.org/home/icse-2019">ICSE 2019</a>, <a href="http://www.ase2018.com/">ASE2018</a>,
+	<a href="http://mobilesoftconf.org/2018/">MobileSoft2018</a>.</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><a href="http://ase2017.org/">ASE 2017</a><i>,
+	</i><a href="http://icse2017.gatech.edu">ICSE 2017</a>, <a href="http://esec-fse17.uni-paderborn.de/">ESEC-FSE 2017</a>,
+	<a href="http://aster.or.jp/conference/icst2017/">ICST 2017</a>,
+	<a href="http://itrust.sutd.edu.sg/hase2017/">HASE 2017</a>.</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><a href="issta2015.cs.uoregon.edu">ISSTA 2015</a>,&nbsp; EMSOFT 2015,&nbsp;
+	<a href="http://icst2015.ist.tu-graz.ac.at/">ICST 2015</a>, 
+	<a  href="http://rv2015.conf.tuwien.ac.at/">RV 2015,</a>
+	<a href="http://2016.icse.cs.txstate.edu">ICSE 2016</a>, 
+	<a href="http://issta2016.cispa.saarland/">ISSTA 2016.</a></p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i>FM 2014,&nbsp; ICSE 2014 (NIER), ISEC 2014, ICST 2014, DATE 2014, RTAS  	2014, LCTES 2014, RTSS 2014.</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><a href="http://isoft.acm.org/isec2013">ISEC 13</a>,  	
+	<a href="http://www.icst.lu/">ICST 13</a>,  	
+	<a href="http://issta2013.inf.usi.ch/">ISSTA 13</a>,  	
+	<a href="http://issta2013.inf.usi.ch/doctoralsymposium">ISSTA 13 Doctoral Symposium</a>, 	
+	<a href="http://www.etaps.org/2013/fase13">FASE 13</a>,  	
+	<a href="http://ase2013.org/">ASE 13</a>, 	
+	<a href="http://ictac2013.ecnu.edu.cn/">ICTAC 13</a>, 	
+	<a href="http://www.uet.vnu.edu.vn/atva2013">ATVA 13</a>,  	
+	<a href="2013.ieee-rtss.org">RTSS 2013</a>.</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<a href="http://www.sigsoft.org/fse20">SIGSOFT FSE12</a>, 	
+	<a href="http://lctes12.cs.purdue.edu/">LCTES12</a>, DATE12, ATVA12.</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
+	<p style="margin-top: 0; margin-bottom: 0" align="left"><i> &nbsp;&nbsp;</i></p>
+
+		
 	<hr>     
 	</font>    	
 	
