--- a/service.html
+++ b/service.html
@@ -8,8 +8,7 @@
 	<hr>    			
 
 	<p style="margin-top: 0; margin-bottom: 0" align="left"><b> 
-	<font face="Arial" size="4" color="#800080">Reviewing and Editorial Service to Research 
-	Community</font></b></p>
+	<font face="Arial" size="4" color="#800080">Conference / Journal related Service</font></b></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left">&nbsp;</p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 	<b> 
