--- a/students.htm
+++ b/students.htm
@@ -90,7 +90,7 @@ with Sergey Mechtaev.</font></p>
 <a href="https://mengrj.github.io/img/ava3.jpg">
 <img src="ava3_small.jpg" xthumbnail-orig-image="https://mengrj.github.io/img/ava3.jpg" border="2"></a></p>
 <p><font face="Arial" size="2"><b><a href="https://mengrj.github.io">Ruijie Meng</a></b>, Joined August 2020, 
-<i>Property guided Fuzz Testing</i>, Co-advised with Ilya Sergey.</font></p>
+<i>Reactive System Fuzzing</i>.</font></p>
 <p>
 <a href="https://media-exp1.licdn.com/dms/image/C5603AQEZUUmGY-gDYg/profile-displayphoto-shrink_200_200/0/1589000373177?e=1632960000&v=beta&t=yRZcjG4VnZyLJ-qAQ6Kjb8v-8fGriHyB6yjxeXTZB2c">
 <img src="1589000373177_small.jpg" alt="Yuntong Zhang" xthumbnail-orig-image="https://media-exp1.licdn.com/dms/image/C5603AQEZUUmGY-gDYg/profile-displayphoto-shrink_200_200/0/1589000373177?e=1632960000&amp;v=beta&amp;t=yRZcjG4VnZyLJ-qAQ6Kjb8v-8fGriHyB6yjxeXTZB2c" border="2"></a></p>
