--- a/students.htm
+++ b/students.htm
@@ -208,8 +208,8 @@ at Singapore University of Technology and Design (SUTD) since 2017.</font></p>
 	Liang], </font><font face="Arial" size="2"><i><a href="Students/Dawei.pdf">
 <font color="#800080">Semantic Analyses to detect 
 	and localize software regression errors</font></a>. </i>Presidential 
-Graduate Fellowship, <b><i>Best Phd Thesis 2013</i></b>, Graduated 2013, Moved to WorldQuant 
-Singapore.</font></p>
+Graduate Fellowship, <b><i>Best Phd Thesis 2013</i></b>, Graduated 2013, CTO, Shenzhen Secidea Network Security Technology Co. Ltd.
+	</font></p>
 <p><a href="sandeep.jpg">
 <img border="2" src="sandeep_small.jpg" xthumbnail-orig-image="sandeep.jpg"></a></p>
 <p><font face="sans-serif" size="2"><b>Sandeep Kumar 
