--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 	<p align="center">&nbsp;</p>
 	<hr>    			  			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	 	
 	<b><font face="Arial" size="4"><a href="AbhikCVshort.pdf">[CV]</a>
-	<a href="teaching.html">[TEACHING]</a>&nbsp;<a href="https://nus-tss.github.io/">[RESEARCH GROUP]</a> 
+	&nbsp;<a href="https://nus-tss.github.io/">[TSS GROUP]</a> &nbsp;
 		<a href="papers.html">[PUBLICATIONS]</a>&nbsp;
-	 <a href="service.html">[SERVICE]</a>&nbsp;	 	 	   
+	 <a href="service.html">[SERVICE]</a>&nbsp;
+		<a href="teaching.html">[TEACHING]</a>&nbsp;
 	<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
 	[Google Scholar]</a>&nbsp;&amp; <a href="select-pubs.html">[Selected Papers]</a></font></b>
 	   <font face="Arial" size="4" color="#800080"><p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
