--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	 <a href="service.html">[SERVICE]</a>&nbsp;
 		<a href="teaching.html">[TEACHING]</a>&nbsp;
 	<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
-	[Google Scholar]</a>&nbsp;&amp; <a href="select-pubs.html">[Selected Papers]</a></font></b>
+	[Google Scholar]</a>&nbsp; </font></b>
 	   <font face="Arial" size="4" color="#800080"><p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
 
 
@@ -117,7 +117,8 @@
 
 <ul>
 <li><font face="Arial">
-	<a href ="https://nus-tss.github.io">Trustworthy and Secure Software (TSS)@NUS</a> Group webpage </font>
+	<a href ="https://nus-tss.github.io">Trustworthy and Secure Software (TSS)@NUS</a> Group webpage </font></li>
+	<li> <font face="Arial"><a href="select-pubs.html">[Selected Papers]</a></font></li>
 	</ul>
 	 	
 <hr>   	
