--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 		<a href="papers.html">[PUBLICATIONS]</a>&nbsp;
 	 <a href="service.html">[SERVICE]</a>&nbsp;
 		<a href="teaching.html">[TEACHING]</a>&nbsp;
-	<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
-	[Google Scholar]</a>&nbsp; </font></b>
+	</font></b>
 	   <font face="Arial" size="4" color="#800080"><p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
 
 
@@ -117,8 +116,10 @@
 
 <ul>
 <li><font face="Arial">
-	<a href ="https://nus-tss.github.io">Trustworthy and Secure Software (TSS)@NUS</a> Group webpage </font></li>
+	<a href ="https://nus-tss.github.io">Trustworthy and Secure Software (TSS)@NUS</a> Group</font></li>
 	<li> <font face="Arial"><a href="select-pubs.html">[Selected Papers]</a></font></li>
+	<li><font face="Arial"></li><a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
+	[Google Scholar]</a></font></li>
 	</ul>
 	 	
 <hr>   	
