--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <li><font face="Arial">
 	<a href ="https://nus-tss.github.io">Trustworthy and Secure Software (TSS)@NUS</a> Group</font></li>
 	<li> <font face="Arial"><a href="select-pubs.html">[Selected Papers]</a></font></li>
-	<li><font face="Arial"></li><a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
+	<li><font face="Arial"><a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
 	[Google Scholar]</a></font></li>
 	</ul>
 	 	
