--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<b><font face="Arial" size="4" color="#800080">Newsflash!</font></b></p>
 	<ul>
-		<li>
+
+		<li> Join the  <a href="https://apr-comp.github.io/index.html">Program Repair Competition</a> to advance the state-of-the-art program repair technology.</li>
+		<br><li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
 		Research program on <a href = "https://nus-tss.github.io/fuzzing/">
@@ -57,7 +59,8 @@
 		<font face="Arial">
 			Work on program repair recognized by International Conference on Software Engineering 
 		 <a href = "https://www.sigsoft.org/awards/icseMIPAward.html"> 
-			Most Influential Paper Award</a> for ICSE2013 paper <a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a>.
+			Most Influential Paper Award</a> for ICSE2013 paper <a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a>. 
+			On a related note, also honored to receive IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).
 		</font></p>
 	
 		
@@ -68,8 +71,6 @@
 		<a href = "https://nus-apr.github.io/launch-event/">Grant launch</a> occured in Nov 22.</p>
 		
 			
-	<br><li> Honored to receive <a href=" https://tc.computer.org/tcse/awards/">IEEE TCSE New Directions Award 2022
-	<a/> for contributions to symbolic execution (jointly with Cristian Cadar).
 			</font></p>
 	</ul>
  	 	
