--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 			Work on program repair recognized by International Conference on Software Engineering 
 		 <a href = "https://www.sigsoft.org/awards/icseMIPAward.html"> 
 			Most Influential Paper Award</a> for ICSE2013 paper <a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a>. 
-			On a related note, also honored to receive IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).
+			<ul>
+				<li>Honored to receive IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).</li>
+			</ul>
 		</font></p>
 	
 		
