--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		 <a href = "https://www.sigsoft.org/awards/icseMIPAward.html"> 
 			Most Influential Paper Award</a> for ICSE2013 paper <a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a>. 
 			<ul>
-				<li>Honored to receive IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).</li>
+				<li>Honored to also receive IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).</li>
 			</ul>
 		</font></p>
 	
