--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<b><font face="Arial" size="4" color="#800080">Newsflash!</font></b></p>
 	<ul>
 
-		<li> Join the  <a href="https://apr-comp.github.io/index.html">Program Repair Competition</a> to advance the state-of-the-art program repair technology.</li>
+		<li> <font face="Arial">Join the  <a href="https://apr-comp.github.io/index.html">Program Repair Competition</a> to advance the state-of-the-art program repair technology.</font></li>
 		<br><li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
