--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
-			Work on program repair recognized by International Conference on Software Engineering 
+			Work on program repair receives International Conference on Software Engineering 
 		 <a href = "https://www.sigsoft.org/awards/icseMIPAward.html"> 
-			Most Influential Paper Award</a> for ICSE2013 paper <a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a>. 
+			Most Influential Paper Award</a> for ICSE13 paper <a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a>. 
 			<ul>
 				<li>Honored to also receive IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).</li>
 			</ul>
@@ -68,7 +68,7 @@
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
-		<a href="https://nus-apr.github.io"><b>Automated Program Repair</b></a> (2022-27). 
+		<a href="https://nus-apr.github.io">Automated Program Repair<</a> (2022-27). 
 		<a href = "https://nus-apr.github.io/launch-event/">Grant launch</a> occured in Nov 22.</p>
 		
 			
