--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
-		<a href="https://nus-apr.github.io">Automated Program Repair<</a> (2022-27). 
+		<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27). 
 		<a href = "https://nus-apr.github.io/launch-event/">Grant launch</a> occured in Nov 22.</p>
 		
 			
