--- a/papers.html
+++ b/papers.html
@@ -12,6 +12,13 @@
 		( <a href="https://arxiv.org/pdf/2305.02601.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, George Pirlea, Abhik Roychoudhury, Ilya Sergey</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">arxiv, Posted 2023. </p> 
+
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ESEC-FSE 23] <br>
+	Program Repair Guided by Datalog-Defined Program Analysis (
+	<a href="pdf/FSE23.pdf">PDF</a> )</b><br>
+	Yu Liu, Sergey Mechtaev, Pavle Subotic, Abhik Roychoudhury <br>
+	ACM Joint European Software Engineering Conference and Symposium on the 
+	Foundations of Software Engineering (ESEC/FSE)&nbsp;2023.</p>
 	 
 	  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[APR23]</b></p>
