--- a/papers.html
+++ b/papers.html
@@ -13,7 +13,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, George Pirlea, Abhik Roychoudhury, Ilya Sergey</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">arxiv, Posted 2023. </p> 
 
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ESEC-FSE 23] <br>
+	<br><p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ESEC-FSE 23] <br>
 	Program Repair Guided by Datalog-Defined Program Analysis (
 	<a href="pdf/FSE23.pdf">PDF</a> )</b><br>
 	Yu Liu, Sergey Mechtaev, Pavle Subotic, Abhik Roychoudhury <br>
