--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 	<ul>
 
 		<li> <font face="Arial">Join the  <a href="https://apr-comp.github.io/index.html">Program Repair Competition</a> to advance the state-of-the-art program repair technology.</font></li>
+		<br>
+		<li> Our <a href="https://tech.nus.edu.sg/product/231">Intelligent Tutoring System (ITS) </a> based on program repair is available via NUS for licensing by universities!</li>
+
 		<br><li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
