--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 	<b><font face="Arial" size="4" color="#800080">Newsflash!</font></b></p>
 	<ul>
 
-		<li> <font face="Arial">Join the  <a href="https://apr-comp.github.io/index.html">Program Repair Competition</a> to advance the state-of-the-art program repair technology.</font></li>
+		<li> <font face="Arial">Join the  <a href="https://apr-comp.github.io/index.html">Program Repair Competition</a> to advance state-of-the-art program repair technology.</li>
 		<br>
-		<li> Our <a href="https://tech.nus.edu.sg/product/231">Intelligent Tutoring System (ITS) </a> based on program repair is available via NUS for licensing!</li>
+		<li> Our <a href="https://tech.nus.edu.sg/product/231">Intelligent Tutoring System (ITS) </a> based on program repair is available via NUS for licensing and usage.</font></li>
 
 		<br><li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
