--- a/index.html
+++ b/index.html
@@ -47,16 +47,6 @@
 	<b><font face="Arial" size="4" color="#800080">Newsflash!</font></b></p>
 	<ul>
 
-		<li> <font face="Arial">Join the  <a href="https://apr-comp.github.io/index.html">Program Repair Competition</a> to advance state-of-the-art program repair technology.</li>
-		<br>
-		<li> Our <a href="https://tech.nus.edu.sg/product/231">Intelligent Tutoring System (ITS) </a> based on program repair is available via NUS for licensing and usage.</font></li>
-
-		<br><li>
-		<p style="margin-top: 0; margin-bottom: 0" align="left">
-		<font face="Arial">
-		Research program on <a href = "https://nus-tss.github.io/fuzzing/">
-	        Fuzz testing </a> (2023-27) launched under National Research Foundation Cybersecurity Research. </p>
-			<br>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
@@ -67,6 +57,17 @@
 				<li>Honored to also receive IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).</li>
 			</ul>
 		</font></p>
+		<br> <li> <font face="Arial">Join the  <a href="https://apr-comp.github.io/index.html">Program Repair Competition</a> to advance state-of-the-art program repair technology.</li>
+		<br>
+		<li> Our <a href="https://tech.nus.edu.sg/product/231">Intelligent Tutoring System (ITS) </a> based on program repair is available via NUS for licensing and usage.</font></li>
+
+		<br><li>
+		<p style="margin-top: 0; margin-bottom: 0" align="left">
+		<font face="Arial">
+		Research program on <a href = "https://nus-tss.github.io/fuzzing/">
+	        Fuzz testing </a> (2023-27) launched under National Research Foundation Cybersecurity Research. </p>
+			<br>
+		
 	
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
