--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<li>Honored to also receive IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).</li>
 			</ul>
 		</font></p>
-		<br> <li> <font face="Arial">Join the  <a href="https://apr-comp.github.io/index.html">Program Repair Competition</a> to advance state-of-the-art program repair technology.</li>
+	 <li> <font face="Arial">Join the  <a href="https://apr-comp.github.io/index.html">Program Repair Competition</a> to advance state-of-the-art program repair technology.</li>
 		<br>
 		<li> Our <a href="https://tech.nus.edu.sg/product/231">Intelligent Tutoring System (ITS) </a> based on program repair is available via NUS for licensing and usage.</font></li>
 
