--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 	<ul>
 
 		<li>
-		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
 			Work on program repair receives International Conference on Software Engineering 
 		 <a href = "https://www.sigsoft.org/awards/icseMIPAward.html"> 
@@ -56,7 +55,8 @@
 			<ul>
 				<li>Honored to also receive IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).</li>
 			</ul>
-		</font></p>
+		</font>
+			<br>
 	 <li> <font face="Arial">Join the  <a href="https://apr-comp.github.io/index.html">Program Repair Competition</a> to advance state-of-the-art program repair technology.</li>
 		<br>
 		<li> Our <a href="https://tech.nus.edu.sg/product/231">Intelligent Tutoring System (ITS) </a> based on program repair is available via NUS for licensing and usage.</font></li>
