--- a/papers.html
+++ b/papers.html
@@ -14,7 +14,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">arxiv, Posted 2023. </p> 
 
 	<br><p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ESEC-FSE 23] <br>
-	Program Repair Guided by Datalog-Defined Program Analysis (
+	Program Repair Guided by Datalog-Defined Static Analysis (
 	<a href="pdf/FSE23.pdf">PDF</a> )</b><br>
 	Yu Liu, Sergey Mechtaev, Pavle Subotic, Abhik Roychoudhury <br>
 	ACM Joint European Software Engineering Conference and Symposium on the 
