--- a/index.html
+++ b/index.html
@@ -92,13 +92,10 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<font face="Arial"> Abhik Roychoudhury is a Professor of Computer Science at the National University of Singapore, 
 		where he has been working since 2001 after receiving his Ph.D. in Computer Science from the State University of New York at Stony Brook 
-		in 2000. He is the Director of the National Satellite of Excellence in Trustworthy Software Systems at Singapore. 
+		in 2000. Abhik's research focuses on software testing and analysis, software security and trust-worthy software construction. 
 		He has also helped set up the Singapore Cyber-security Consortium in 2016. 
 		This was the first industry consortium in Computer Science, with 25 companies in the 
 		cyber-security space engaging with academia for joint research, discussion and collaboration. 
-		Abhik's research focuses on software testing and analysis, software security and trust-worthy software construction. 
-		Abhik is a member of the Steering committee of the flagship conferences in Software Engineering, 
-		International Conference on Software Engineering (ICSE) and Symposium on Foundations of Software Engineering (FSE). 
 		His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
 		University of Melbourne and other places). His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
 		for contributions to symbolic execution, as well as with an ICSE Most Influentual Paper Award 
